--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -37,29 +37,7 @@
                     <view key="view" contentMode="scaleToFill" id="Msk-Mj-Xv7">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="f7E-Og-RkN">
-                                <rect key="frame" x="141" y="377" width="39" height="37"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </pageControl>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8K9-NP-VbA">
-                                <rect key="frame" x="135" y="442" width="51" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Got it !!">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="letsGoButtonTapped:" destination="Guv-Xq-bZn" eventType="touchUpInside" id="194-iF-QdG"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="f7E-Og-RkN" firstAttribute="centerX" secondItem="Msk-Mj-Xv7" secondAttribute="centerX" id="0bg-TR-sl7"/>
-                            <constraint firstItem="Lmq-e0-Ueg" firstAttribute="top" secondItem="8K9-NP-VbA" secondAttribute="bottom" constant="8" id="LNm-RL-6Cj"/>
-                            <constraint firstItem="f7E-Og-RkN" firstAttribute="centerX" secondItem="8K9-NP-VbA" secondAttribute="centerX" id="XLj-J2-sRW"/>
-                            <constraint firstItem="8K9-NP-VbA" firstAttribute="top" secondItem="f7E-Og-RkN" secondAttribute="bottom" constant="28" id="y50-uC-16X"/>
-                        </constraints>
+                        <color key="backgroundColor" red="0.47843137250000001" green="0.78039215689999997" blue="0.81176470590000005" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
                         <segue destination="vXZ-lx-hvc" kind="modal" identifier="tutorialToLogin" id="uUh-sr-VN3"/>
@@ -77,7 +55,7 @@
                 </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a5y-9m-VMw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-12" y="-2057"/>
+            <point key="canvasLocation" x="-10" y="-2057"/>
         </scene>
         <!--Menu Table View Controller-->
         <scene sceneID="iV5-Oq-hHd">
@@ -1156,7 +1134,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="142" y="231" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="5CEC8B20-DF49-4A74-A74F-C39DFA8F02BC" colorSpace="pattern"/>
+                                <color key="color" patternImage="A39CC5AE-66C8-4957-AAB5-D91F4611489F" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="find-crew-wood.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
                                 <rect key="frame" x="0.0" y="424" width="320" height="56"/>
@@ -1259,23 +1237,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UOo-wz-ltX">
-                                <rect key="frame" x="0.0" y="44" width="320" height="436"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UOo-wz-ltX">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vcW-oD-e6K">
-                                <rect key="frame" x="20" y="20" width="280" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.023529411760000001" green="0.19215686269999999" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.47843137250000001" green="0.78039215689999997" blue="0.81176470590000005" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
                         <outlet property="backgroundImageView" destination="UOo-wz-ltX" id="mZD-Vo-wCl"/>
-                        <outlet property="titleLabel" destination="vcW-oD-e6K" id="XVd-8w-cx2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q6G-FM-x27" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1388,7 +1358,7 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                 <rect key="frame" x="142" y="221" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="E9B55E79-0086-4104-9993-0B807D3E596C" colorSpace="pattern"/>
+                                <color key="color" patternImage="8E6F934A-4FB5-41C2-A481-5ED801DB143E" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="footer.png" translatesAutoresizingMaskIntoConstraints="NO" id="lra-f2-ZOm">
                                 <rect key="frame" x="0.0" y="352" width="320" height="128"/>
@@ -1623,7 +1593,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="5CEC8B20-DF49-4A74-A74F-C39DFA8F02BC" width="320" height="460">
+        <image name="8E6F934A-4FB5-41C2-A481-5ED801DB143E" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11510,7 +11480,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="E9B55E79-0086-4104-9993-0B807D3E596C" width="320" height="460">
+        <image name="A39CC5AE-66C8-4957-AAB5-D91F4611489F" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -21416,10 +21386,10 @@ AAAAAAAAAAAJCvs
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="pAS-ik-Ig1"/>
         <segue reference="R97-G3-Fuo"/>
-        <segue reference="nz4-w7-m9s"/>
-        <segue reference="WTk-75-MPQ"/>
+        <segue reference="pAS-ik-Ig1"/>
         <segue reference="ozj-xX-N4X"/>
+        <segue reference="nz4-w7-m9s"/>
+        <segue reference="uUh-sr-VN3"/>
     </inferredMetricsTieBreakers>
 </document>
